# BF-JIT-Compiler

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile.c  compile.h  intermediate_representation.c  intermediate_representation.h  jit.c  jit.h  main.c
tests/: test_harness.h  test_ir.c
